--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,20 +12,26 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   cupertino_icons: ^1.0.2
   http: ^0.12.0+1
   get_it: ^3.0.3
   persian_datepicker: ^0.2.1
   jalali_calendar: ^1.0.4
-  curved_navigation_bar: "^0.3.3"
-  ff_navigation_bar: ^0.0.1
-  flutter_local_notifications: ^1.4.3
+  curved_navigation_bar: ^0.3.3
+  ff_navigation_bar: any
+  flutter_local_notifications: any
   sqflite: ^2.0.0+3
-  path_provider: ^0.5.0+1
+  path_provider: any
   intl:
   persian_datetime_picker: 2.1.1
   numberpicker: ^2.1.1
   shared_preferences: any
+
+  after_layout: ^1.1.0
+  flutter_onboard: any
+  animated_text_kit: ^4.2.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -35,10 +41,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/
 
   # fonts:
   #   - family: Schyler
