--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,6 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  http: ^0.12.0+1
   get_it: ^3.0.3
   persian_datepicker: ^0.2.1
   jalali_calendar: ^1.0.4
@@ -31,7 +30,7 @@ dependencies:
   after_layout: ^1.1.0
   flutter_onboard: any
   animated_text_kit: ^4.2.1
-
+  fl_chart: ^0.36.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
