--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_onboard: any
   animated_text_kit: ^4.2.1
   fl_chart: ^0.36.1
+  pie_chart: ^5.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
