--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
+  http: ^0.12.0+2
+  ant_icons: any
+  icon_picker: ^2.0.0
+  multi_select_flutter: ^4.0.0
   cupertino_icons: ^1.0.2
   get_it: ^3.0.3
   persian_datepicker: ^0.2.1
