--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   cupertino_icons: ^1.0.2
   get_it: ^3.0.3
@@ -36,6 +38,17 @@ dependencies:
   
   fl_chart: ^0.36.1
   pie_chart: ^5.0.0
+
+  http: ^0.12.0+2
+  ant_icons: any
+  icon_picker: ^2.0.0
+  multi_select_flutter: ^4.0.0
+
+  connectivity: ^3.0.6
+  another_flushbar: ^1.10.22
+
+  flutter_rating_bar: ^4.0.0
+  flutter_statusbarcolor: ^0.2.3
 
 dev_dependencies:
   flutter_test:
