--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,8 +52,10 @@ dependencies:
   connectivity: ^3.0.6
   another_flushbar: ^1.10.22
 
-  flutter_rating_bar: ^4.0.0
-  flutter_statusbarcolor: ^0.2.3
+  image_picker: ^0.7.5+3
+  random_color: ^1.0.5
+
+
 
 dev_dependencies:
   flutter_test:
