--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ flutter:
      - assets/img/mercury.png
      - assets/img/ic_distance.png
      - assets/img/ic_gravity.png
+     - assets/
 #   fonts:
 #     - family: calibri
 #       fonts:
