--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   fl_chart: ^0.36.1
   pie_chart: ^5.0.0
 
-  http: ^0.12.0+2
+  http: ^0.13.0
   ant_icons: any
   icon_picker: ^2.0.0
   multi_select_flutter: ^4.0.0
