--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  flutter_speed_dial: ^1.2.5
   rounded_loading_button: ^2.0.3
   flutter:
     sdk: flutter
