--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,24 +40,19 @@ dependencies:
 
   auto_direction: ^0.0.5
   video_player: ^2.1.1
-
   fl_chart: ^0.36.1
   pie_chart: ^5.0.0
 
-  http: ^0.13.0
+  http: ^0.12.0+2
   ant_icons: any
   icon_picker: ^2.0.0
   multi_select_flutter: ^4.0.0
 
   connectivity: ^3.0.6
   another_flushbar: ^1.10.22
-
-
+  charts_flutter: ^0.10.0
   image_picker: ^0.6.7+22
   random_color: ^1.0.5
-
-
-
 
 dev_dependencies:
   flutter_test:
