--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   fl_chart: ^0.36.1
   pie_chart: ^5.0.0
 
-  http: ^0.13.0
+  http: ^0.12.0+2
   ant_icons: any
   icon_picker: ^2.0.0
   multi_select_flutter: ^4.0.0
@@ -53,7 +53,6 @@ dependencies:
   another_flushbar: ^1.10.22
 
 
-  image_picker: ^0.6.7+22
   random_color: ^1.0.5
 
 
@@ -81,17 +80,3 @@ flutter:
     - assets/img/ic_distance.png
     - assets/img/ic_gravity.png
     - assets/
-#   fonts:
-#     - family: calibri
-#       fonts:
-#         - asset: assets/fonts/calibrb.ttf
-##         - asset: fonts/calibrii.ttf
-##         - asset: fonts/calibril.ttf
-##         - asset: fonts/calibrili.ttf
-##         - asset: fonts/calibriz.ttf
-
-
-
-
-
-
